--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
       "email": "xltxlm@qq.com"
     }
   ],
+  "minimum-stability": "dev",
   "description":"网址的相关处理",
   "require": {
-    "php": ">=7.1"
+    "php": "~7.1"
   },
   "autoload": {
     "psr-4": {
@@ -16,6 +17,11 @@
         "src/",
         "./"
       ]
-    }
+    },
+    "files": [
+    ]
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9"
   }
 }
